random next button is added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div>
+
     <p id="myp1">
+      <h1 id="myh1"></h1>
       <audio id = "myAudio" controls>
         <source src="" type="audio/mpeg">
       </audio>
@@ -17,7 +19,8 @@
       <button id="play" " type="button">Play</button>
       <button id="pause" " type="button">Pause</button>
       <button id="stop" " type="button">Stop</button>
-      <button onclick="nextAudio()" type="button">Next</button>  
+      <button onclick="nextAudio()" type="button">Next</button>
+      <button onclick="random()" type="button">Random Next</button>  
     </p>
     <p>
       <button id="load" " type="button" <a href="#" class="activate-modal">Load</a></button>
