removed the built in controls

--- a/index.html
+++ b/index.html
@@ -11,19 +11,30 @@
 
     <p id="myp1">
       <h1 id="myh1"></h1>
-      <audio id = "myAudio" controls>
+      <audio id = "myAudio">
         <source src="" type="audio/mpeg">
       </audio>
     </p>
     <p id="myp2">
-      <button id="play" " type="button">Play</button>
-      <button id="pause" " type="button">Pause</button>
-      <button id="stop" " type="button">Stop</button>
+      <button id="play" type="button">Play</button>
+      <button id="pause" type="button">Pause</button>
+      <button id="stop" type="button">Stop</button>
       <button onclick="nextAudio()" type="button">Next</button>
       <button onclick="random()" type="button">Random Next</button>  
-    </p>
-    <p>
       <button id="load" " type="button" <a href="#" class="activate-modal">Load</a></button>
+    </p>
+  </div>
+  <div id="midiv2">
+    <p>
+      <h1>Playlist</h1>
+      <ul id="playlist">
+        <li id="play1">music1</li><br>
+        <li id="play2">music2</li><br>
+        <li id="play3">music3</li><br>
+        <li id="play4">music4</li><br>
+        <li id="play5">music5</li><br>
+        
+      </ul>
     </p>
   </div>
   <div div class="modal-wrapper">
